--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
 version: "3.8"
 services:
-  sonarqube:
-    image: docker.royfuwei.com/tools/ts-react-resume
+  web:
+    image: harbor.royfuwei.com/tools/ts-react-resume
     container_name: ts-resume-frontend
     restart: always
     networks:
       - devops
-
 networks:
   devops:
     external: true
