--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.0.0-alpha.7",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
@@ -15,6 +16,8 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "cosmiconfig": "^7.0.1",
+    "craco-less": "^2.0.0",
     "dotenv": "^16.0.1",
     "env-var": "^7.1.1",
     "moment": "^2.29.3",
@@ -31,11 +34,12 @@
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
+  "homepage": ".",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +61,9 @@
   },
   "devDependencies": {
     "@types/react-router": "^5.1.18",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "craco-sass-resources-loader": "^1.1.0",
+    "esbuild-loader": "^2.19.0",
+    "webpack": "^5.74.0"
   }
 }
